--- a/scss/_dimensiones.scss
+++ b/scss/_dimensiones.scss
@@ -1,9 +1,5 @@
 @use "colores" as *;
 
-.course {
-  width: 350px;
-}
-
 //Configuración letras 
 $letraTamanyo:14px;
 $border-radius: 8px;
@@ -11,6 +7,7 @@ $border-radius-grande:18px;
 $border-width: 1px;
 $widthmaximo:100%;
 $heightmaximo:100%;
+$tamanyoPredefinido:1000px;
 
 //Dimensiones botones
 $btn-padding-topybottom:5px;
@@ -23,6 +20,7 @@ $card-width: 350px;
 $card-height: 370px;
 $flip-duration: 0.8s;
 $map-height: 35%;
+$map-width:95%;
 
 $map-radius: 16px;
 $price-border-thickness: 10px;
@@ -46,8 +44,11 @@ $icon-mid-height: 35px;
 
 $margenOPaddingDe5:5px;
 $margenOPaddingDe8:8px;
+$margenOPaddingDe10:10px;
 $margenOPaddingDe12:12px;
 $margenOPaddingDe20:20px;
+$margenOPaddingDe15:15px;
+$margenOPaddingDe26:26px;
 $margenOPaddingDe40:40px;
 $margenOPaddingDe3Porciento:3%;
 
@@ -58,3 +59,5 @@ $conDimensionesMuyBajas:2px;
 $conDimensionesBajas:6px;
 $searchBar-width: 35%;
 $tamanyoCasiMaxima:80%;
+$tamanyoCurso:350px;
+$tamanyoHeightCurso:370px;
