--- a/scss/_caracteristicas.scss
+++ b/scss/_caracteristicas.scss
@@ -13,5 +13,8 @@ $izquierda:left;
 $derecha:right;
 $cubrir: cover;
 $alineacionVertical: middle;
+$alineacionVertical-Top:top;
 $bloqueEnLinea: inline-block;
 $automatico: auto;
+$noRomperPalabra:break-word;
+$infinito:infinite;
